unpackaged/main/default/objects/Verto_Form_Submission__c/Verto_Form_Submission__c.object-meta.xml
<CustomObject>
    <description>Form submissions from guest site pages.</description>
    <label>Verto Form Submission</label>
    <nameField>
        <displayFormat>Verto Form-{0000000}</displayFormat>
        <label>Form Submission Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Verto Form Submissions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>