unpackaged/main/default/objects/Verto_Form_Submission__c/fields/Acknowledgement__c.field-meta.xml
<CustomField>
    <fullName>Acknowledgement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Submission Acknowledgement from submitter.</description>
    <label>Acknowledgement</label>
    <type>Checkbox</type>
</CustomField>