unpackaged/main/default/objects/Verto_Form_Submission__c/fields/Acknowledgement_Date__c.field-meta.xml
<CustomField>
    <fullName>Acknowledgement_Date__c</fullName>
    <label>Acknowledgement Date</label>
    <type>Date</type>
</CustomField>