unpackaged/main/default/objects/Verto_Form_Submission__c/fields/Acknowledgement_Type__c.field-meta.xml
<CustomField>
    <fullName>Acknowledgement_Type__c</fullName>
    <inlineHelpText>Specific details about what the submitter acknowledged.</inlineHelpText>
    <label>Acknowledgement Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>It is my responsibility to have a valid travel document to travel by air to Hawaii.</fullName>
            </value>
            <value>
                <fullName>It is my responsibility to obtain legal documentation required for travel.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>