unpackaged/main/default/objects/Verto_Form_Submission__c/fields/Enrollment_Record__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Enrollment Record</label>
    <referenceTo>Enrollment_Record__c</referenceTo>
    <relationshipLabel>Verto Form Submissions</relationshipLabel>
    <relationshipName>Verto_Form_Submissions</relationshipName>
    <type>Lookup</type>
</CustomField>