unpackaged/main/default/objects/Verto_Form_Submission__c/fields/Legal_Document_Application_Date__c.field-meta.xml
<CustomField>
    <fullName>Legal_Document_Application_Date__c</fullName>
    <inlineHelpText>The date the submitter sent in their application for legal documents</inlineHelpText>
    <label>Legal Document Application Date</label>
    <type>Date</type>
</CustomField>