unpackaged/main/default/objects/Verto_Form_Submission__c/fields/Legal_Document_Application_Expedited__c.field-meta.xml
<CustomField>
    <fullName>Legal_Document_Application_Expedited__c</fullName>
    <label>Legal Document Application Expedited</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>