unpackaged/main/default/objects/Verto_Form_Submission__c/fields/Legal_Document_Application_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Legal_Document_Application_Submitted__c</fullName>
    <description>Indicates whether the submitter has already completed their application for any required legal documents.</description>
    <inlineHelpText>Indicates whether the submitter has already completed their application for any required legal documents.</inlineHelpText>
    <label>Legal Document Application Submitted</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>