unpackaged/main/default/objects/Verto_Form_Submission__c/fields/Legal_Document_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Legal_Document_Expiration_Date__c</fullName>
    <label>Legal Document Expiration Date</label>
    <type>Date</type>
</CustomField>