unpackaged/main/default/objects/Verto_Form_Submission__c/fields/Legal_Document_Issuing_Country__c.field-meta.xml
<CustomField>
    <fullName>Legal_Document_Issuing_Country__c</fullName>
    <label>Legal Document Issuing Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Countries</valueSetName>
    </valueSet>
</CustomField>