unpackaged/main/default/objects/Verto_Form_Submission__c/fields/Legal_Document_Sex__c.field-meta.xml
<CustomField>
    <fullName>Legal_Document_Sex__c</fullName>
    <label>Legal Document Sex</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Female</fullName>
            </value>
            <value>
                <fullName>Male</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>