unpackaged/main/default/objects/Verto_Form_Submission__c/fields/Legal_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Legal_Full_Name__c</fullName>
    <description>The full legal name submitted. Used when the name input is a single field instead of separate First and Last Name fields.</description>
    <label>Legal Full Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>