unpackaged/main/default/objects/Verto_Form_Submission__c/fields/Lookup_Field__c.field-meta.xml
<CustomField>
    <fullName>Lookup_Field__c</fullName>
    <label>Lookup Field</label>
    <length>18</length>
    <type>Text</type>
</CustomField>