unpackaged/main/default/objects/Verto_Form_Submission__c/fields/New_or_Renewing_Passport__c.field-meta.xml
<CustomField>
    <fullName>New_or_Renewing_Passport__c</fullName>
    <label>New or Renewing Passport</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Passport</fullName>
            </value>
            <value>
                <fullName>Renewing Passport</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>