unpackaged/main/default/objects/Verto_Form_Submission__c/fields/Passport_Number__c.field-meta.xml
<CustomField>
    <fullName>Passport_Number__c</fullName>
    <label>Passport Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>