unpackaged/main/default/objects/Verto_Form_Submission__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <formula>IF(
    !ISBLANK(Enrollment_Record__c),
    Enrollment_Record__r.Program__r.Name,
    null
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Program</label>
    <type>Text</type>
</CustomField>