unpackaged/main/default/objects/Verto_Form_Submission__c/fields/Students_Name__c.field-meta.xml
<CustomField>
    <fullName>Students_Name__c</fullName>
    <formula>IF(NOT(ISBLANK(Enrollment_Record__c)), Enrollment_Record__r.Students_Name__c, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Student&#39;s Name</label>
    <type>Text</type>
</CustomField>