unpackaged/main/default/objects/Verto_Form_Submission__c/recordTypes/Passport.recordType-meta.xml
<RecordType>
    <fullName>Passport</fullName>
    <active>true</active>
    <label>Passport</label>
</RecordType>