unpackaged/main/default/objects/Verto_Form_Submission__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Students_Name__c</columns>
    <columns>Legal_Full_Name__c</columns>
    <columns>Type__c</columns>
    <columns>Program__c</columns>
    <columns>Status__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>