unpackaged/main/default/objects/Verto_Form_Submission__c/listViews/My_Pending_Submissions.listView-meta.xml
<ListView>
    <fullName>My_Pending_Submissions</fullName>
    <columns>NAME</columns>
    <columns>Students_Name__c</columns>
    <columns>Status__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Submitted</value>
    </filters>
    <label>My Pending Submissions</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>